# rgveda-ft

./: .gitignore  QUICKSTART.md  README.md  TRANSFER_INSTRUCTIONS.md  pyproject.toml
app/: __init__.py  cli.py  data_preparation.py  test_setup.py  train.py
